--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,8 @@ footer{
     align-items: center;
     font-size: 20px;
     padding: 20px 50px;
-    background-color: linear-gradient(90deg, #a00101,#1d45b3);
+    background: linear-gradient(90deg, #a00101,#1d45b3);
     color: #fff;
+    width: 100%;
+    height: 100%;
 }
